metadata/force-app/main/default/objects/ccrz__E_ProductIndex__c/ccrz__E_ProductIndex__c.object-meta.xml
<CustomObject>
    <label>CC Product Index</label>
    <nameField>
        <displayFormat>PI-{000000000}</displayFormat>
        <label>CC Product Index Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Product Indices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>