metadata/force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__Category__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Category__c</fullName>
    <description>The category that the product is assigned to.</description>
    <externalId>true</externalId>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>