metadata/force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__CategoryStartDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CategoryStartDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The first day that the category is available on the storefront.</description>
    <label>Category Start Date</label>
    <type>Date</type>
</CustomField>