metadata/force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__ProductCategoryEndDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductCategoryEndDate__c</fullName>
    <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
    <description>The last day that the product&apos;s category assignment is active on the storefront.</description>
    <label>Product Category End Date</label>
    <type>Date</type>
</CustomField>