metadata/force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__ProductCategorySequence__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductCategorySequence__c</fullName>
    <description>A number that specifies where the product should sort in the category in comparison to other products assigned to the same category. The lower the value, the more prominent the product.</description>
    <externalId>true</externalId>
    <label>Product Category Sequence</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>