metadata/force-app/main/default/objects/ccrz__E_ProductIndex__c/fields/ccrz__ProductStatus__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductStatus__c</fullName>
    <description>Availability of the product on the storefront. In Creation: The product isn&apos;t visible on the storefront because details aren&apos;t complete. Blocked: The product isn&apos;t visible on the storefront. Not Orderable: The product is visible on the storefront but can&apos;t be added to a cart. Released: The product is visible on the storefront and can be added to a cart.</description>
    <externalId>true</externalId>
    <label>Product Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>